# bizlib2

./: CMakeLists.txt  README.md  engine_maths.h  libs.h  main.cpp  quad.cpp  quad.h  shaderprogram.cpp  shaderprogram.h  sprite.cpp  sprite.h
Resources/Shaders/: simple.frag  simple.vert  texture.frag  texture.vert
